<resources>
    <string name="app_name">StepAccuracy</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_settings">Settings</string>

    <!-- Home fragment-->
    <string name="start_message">Press to start comparing step counting</string>
    <string name="first_algorithm">Algorithm 1</string>
    <string name="second_algorithm">Algorithm 2</string>
    <string name="third_algorithm">Algorithm 3</string>


    <!-- Pedometers layout-->
    <string name="time">Time</string>
    <string name="distance">Distance</string>
    <string name="accuracy">Accuracy</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="steps">Steps</string>

    <!-- Numbers-->
    <string name="zero">0</string>
    <string name="zeroP">0%</string>
    <string name="set_daily_step_text">Set the daily step goal</string>
    <string name="edit_goal_step">Enter value</string>
    <string name="time_text">Select the time measure</string>
    <string name="radiobutton_second">Second</string>
    <string name="radiobutton_minute">Minute</string>
    <string name="distance_text">Select the distance measure</string>
    <string name="radiobutton_chilometer">Chilometer(km)</string>
    <string name="radiobutton_meter">Meter(m)</string>
    <string name="button_save">save</string>
    <string name="info_buttonPlay">It allows the simultaneous use of the three implemented step counting algorithms.</string>
    <string name="info_pedometer1">Pedometer that uses accelerometer data to evaluate the movement of a step. It uses a superimposed window data collection method of size 50, which is populated as data is read from the sensors.</string>
    <string name="info_pedometer2">Pedometer that uses GPS data with latitude and longitude to calculate the distance between two points and therefore the relative steps taken. The data detected by the sensors are updated every time a distance of at least 10 meters is covered.</string>
    <string name="info_pedometer3">Pedometer that uses accelerometer data to evaluate the movement of a step. The sensor data are not saved each time and used but the calculation of the steps takes place only with each new triplet of accelerometric data.</string>
    <string name="start_button">Start</string>
    <string name="message_pedometer">Select an algorithm</string>
    <string name="goal_message">You\'ve reached your daily goal!!</string>
</resources>